<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PathfinderApp</string>
    <string name="title_search">Search</string>
    <string name="title_tours">Tours</string>
    <string name="title_publish">Publish</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="helloverga">Hello verga</string>

    <!-- FACEBOOK -->
    <string name="facebook_app_id">293971671262365</string>
    <string name="fb_login_protocol_scheme">fb293971671262365</string>

    <!-- WHEN FRAGMENT -->
    <string name="when_title">When will it be?</string>
    <string name="whichTimeTitle">What does the tour start?</string>
    <string name="durationTitle">When does the tour finish?</string>
    <string name="continueText">Continue</string>
    <string name="languagesTitle">Which languages will it be?</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="spanish">Spanish</string>
    <string name="turists_allowed_title">How many tourists will it have?</string>
    <string name="whereTitle">Where do you want to guide?</string>
    <string name="routeSelectionTitle">Select the highlights!</string>
    <string name="title_activity_fragment_map">map</string>
    <string name="priceTitle">This is our recommendation.¿Is it ok?</string>
    <string name="defaultPrice">15</string>
    <string name="defaultCurrency">€</string>
    <string name="summaryTitle">Tour Summary</string>
    <string name="day">Day:</string>
    <string name="confirm">Confirm</string>
    <string name="separator">-</string>

    <!-- SETTINGS -->
    <string name="logout">Log out</string>
    <string name="save">Save</string>
    <string name="notifications">Notifications:</string>
    <string name="connectivity">Connectivity:</string>
    <string name="settings">Settings</string>
    <string name="wifi">Wifi</string>
    <string name="wifiandco">Wifi and Mobile data</string>

    <string name="alertTitle">¡Hey!</string>
    <string name="selectLanguageAlert">You must choose at least one language</string>
    <string name="search_bar">Search a city</string>
    <string name="languages">Languages:</string>
    <string name="scoreTitle">Score:</string>
    <string name="toursTitle">Tours</string>
    <string name="reviewsTitle">Reviews</string>
    <string name="scoresTitle">Score</string>
    <string name="yourToursTitle">My tours</string>
    <string name="inscriptionSuccessful">You have joined correctly</string>
    <string name="creationSuccessful">Your tour has been created correctly</string>
    <string name="mapToastMessage">You must choose at least one point</string>
    <string name="location">Be sure that geolocation is active.</string>

    <!-- KEYS -->
    <string name="wifi_ok" translatable="false">wifi_ok</string>
    <string name="mobile_ok" translatable="false">mobile_ok</string>
    <string name="internet_ko" translatable="false">internet_ko</string>

    <string name="delete" translatable="false">BORRAR</string>
    <string name="facebook_picture_link">facebook_picture_link</string>
    <string name="facebook_name">facebook_name</string>
    <string name="facebook_email">facebook_email</string>
    <string name="notification">notifications</string>
    <string name="full_connectivity">full_connectivity</string>
    <string name="send_token" translatable="false">send_token</string>
    <string name="message_token" translatable="false">message_token</string>
    <string name="french_key">french_key</string>
    <string name="english_key">english_key</string>
    <string name="german_key">german_key</string>
    <string name="italian_key">italian_key</string>
    <string name="spanish_key">spanish_key</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="facebook_id">facebook_id</string>
    <string name="confirmation">Confirmation</string>
    <string name="in_tour">Do you want to enter in this tour?</string>
    <string name="out_tour">Do you want to cancel this tour?</string>
    <!--TOAST -->
    <string name="configuration_stored_message">Your configuration has been stored!</string>
    <string name="speaking_languages">Which languages do you speak?</string>
    <string name="review">Review</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="review_error">You must add a review.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="default_notification_channel_id" translatable="false">PathfinderID</string>
    <string name="default_notification_channel_name" translatable="false">Pathfinder</string>

    <string name="not_connection">No Internet connection</string>
    <string name="account_created">The account has been created!</string>
    <string name="authentication_success">Authentication successful!</string>
    <string name="verification_email">Verification email will be sent to the email address.</string>
    <string name="restore_account">Please check the instructions sent to your email to restore the password.</string>
    <string name="email_not_found">The E-mail inserted was not found.</string>


    <!--Empty -->
    <string name="empty_reviews">No reviews yet!</string>
    <string name="empty_posts">No tours yet!</string>

</resources>
