<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/background_popup"
    android:padding="5dp">

    <TextView
        android:id="@+id/AddReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:text="@string/review"
        android:gravity="start|top" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:maxLength="100" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:text="@string/review_error"
        android:textColor="@color/red"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnAccept"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/buttonstylepopup"
            android:text="@string/accept"
            android:layout_marginLeft="60dp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/buttonstylepopup"
            android:text="@string/cancel"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>